feat: support custom device icons in the web app
